2.0a3 (TBD)

- Subscriptions API methods communicating with particular subscription
  endpoints (cancel_subscription, update_subscription, get_subscription, and
  get_results) were broken due to missing 'f' prefixes (#687). The prefixes
  have been added.

2.0a2 (2022-07-04)

- Upgrade httpx to 0.23, change how quota exceptions are caught
- Increase reliability of communication with Planet servers and avoid clobbering them
- Add CLI data stats
- CLI search-quick -> search, API quick-search -> search
- limit option: remove None as a possibility, value of zero means no limit
- fix sort param field
- add sort option to planet data search-quick

2.0a1 (2022-06-28)

This is the first pre-release of the new features and interfaces coming in
version 2.0.0 later this year. A more complete listing of changes in this
package is coming soon. The highlights are

- Requirement of Python version 3.7 or newer.
- Support for Planet Data, Orders, and Subscription APIs.
- A Python package (the SDK) with asyncio support.
- A new and improved command line interface (the CLI). 

1.4.6 (2020-05-18)

- New: you can now pass a search string to the Orders CLI via `--ids_from_search`
- New: the Orders CLI now has a shortcut `--clip` for clipping operations
- Fix: you can now download Order locations one by one
- Multiple test fixes: Python 2.7 tests, flake8, & make html-docs warning
- Add support for new 5-band asset types

1.4.5 (2020-02-11)

 - Add support for new skysat video item and asset types
 - Add `strict` keyword argument to searches

1.4.4 (2019-12-17)

- Pin requests-futures version to avoid error message.
- Fix broke jq parsing for regular data search
- Under certain conditions the response body can get printed more than once

1.4.3 (2019-11-14)

- Updating copyright date for modified files
- Removing monkey patch
- Make sure base_url has a trailing /
- Simplified configuration of analytics client to be consistent

1.4.2 (2019-10-04)

- added new asset type

1.4.1 (2019-09-17)
